--- a/design/recipe.css
+++ b/design/recipe.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'Young Serif';
-    src: url('C:/Users/Aniruddha.Ganguly/Documents/practice_web/recipe-page-main/recipe-page-main/assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
+    src: url('../assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Outfit';
-    src: url('C:/Users/Aniruddha.Ganguly/Documents/practice_web/recipe-page-main/recipe-page-main/assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype');
+    src: url('../assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
